--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/temple.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kalathurmariyammtemple.vercel.app/" />
+    <script src="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.js"></script>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
